[package]
name = "varienum"
version = "0.2.1"
edition = "2024"
authors = ["Matt Oestreich"]
description = "Runtime inspection of enum variants."
license = "GPL-3.0-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/matthewoestreich/varienum"
homepage = "https://github.com/matthewoestreich/varienum#README.md"
keywords = []
categories = [
] # See available categories here: https://crates.io/category_slugs

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
