[package]
name = "varienum"
version = "0.2.11"
edition = "2024"
authors = ["Matt Oestreich"]
description = "Runtime inspection of enum variants."
license = "GPL-3.0-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/matthewoestreich/varienum"
homepage = "https://github.com/matthewoestreich/varienum#README.md"
keywords = []
categories = [
] # See available categories here: https://crates.io/category_slugs

[lib]
name = "varienum"
path = "src/lib.rs"

[dependencies]
varienum-macro = "0.1.0"
